// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/List/Object Borderless 1`] = `
<section>
  

  <h4
    id="objectListItemBorderless"
  >
    Borderless Object List Item
  </h4>
  

  <div
    style="max-width: 450px"
  >
    

    <ul
      aria-labelledby="objectListItemBorderless"
      class="fd-list fd-list--object fd-list--no-border fd-list--navigation"
      role="listbox"
    >
      
  
      <li
        class="fd-list__item fd-list__item--link"
        role="option"
        tabindex="0"
      >
        
    
        <a
          class="fd-list__link"
          tabindex="0"
        >
          
    
          <div
            class="fd-list__content"
          >
            
    
            <div
              class="fd-list__optional"
            >
              
    
              <span
                class="fd-list__optional-text"
              >
                Optional inline text
              </span>
              
    
            </div>
            
    
            <div
              class="fd-list__object fd-list__object--top-row"
            >
              
    
              <span
                class="fd-avatar fd-list__object-avatar fd-avatar--s"
                style="background-image: url('http://lorempixel.com/400/400/nature/4/')"
              />
              
    
              <div
                class="fd-list__object fd-list__object--top-left"
              >
                
    
                <div
                  class="fd-object-identifier fd-list__object-identifier"
                >
                  
      
                  <p
                    class="fd-object-identifier__title fd-list__object-identifier-title"
                  >
                    
    Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
     
                  </p>
                  
     
                </div>
              </div>
              
    
              <div
                class="fd-list__object fd-list__object--top-right"
              >
                
    
                <span
                  class="fd-object-number fd-list__object-number fd-object-number--positive"
                >
                  
    
                  <span
                    class="fd-object-number__text fd-list__object-number-text"
                  >
                    956.00
                  </span>
                  
    
                  <span
                    class="fd-object-number__unit fd-list__object-number-unit"
                  >
                    Euro
                  </span>
                </span>
                
    
              </div>
              
   
            </div>
            
   
            <div
              class="fd-list__object fd-list__object--bottom"
            >
              
   
              <div
                class="fd-list__object fd-list__object--bottom-row"
              >
                
   
                <div
                  class="fd-list__object fd-list__object--bottom-right"
                >
                  
   
                  <span
                    class="fd-object-status fd-list__object-status fd-object-status--positive"
                  >
                    
   
                    <span
                      class="fd-object-status__text fd-list__object-status-text"
                    >
                      First status
                    </span>
                  </span>
                  
   
                </div>
                
   
              </div>
              
   
              <div
                class="fd-list__object fd-list__object--bottom-row"
              >
                
   
                <div
                  class="fd-list__object fd-list__object--bottom-left"
                >
                  
   
                  <div
                    class="fd-list__object-attribute"
                  >
                    
   
                    <span
                      class="fd-list__object-attribute-text"
                    >
                      Second Attribute
                    </span>
                    
   
                  </div>
                  
   
                </div>
                
   
                <div
                  class="fd-list__object fd-list__object--bottom-right"
                >
                  
   
                  <span
                    class="fd-object-status fd-list__object-status fd-object-status--positive"
                  >
                    
   
                    <span
                      class="fd-object-status__text fd-list__object-status-text"
                    >
                      Second status
                    </span>
                  </span>
                  
   
                </div>
                
   
              </div>
              
   
              <div
                class="fd-list__object fd-list__object--bottom-row"
              >
                
   
                <div
                  class="fd-list__object fd-list__object--bottom-left"
                >
                  
   
                  <div
                    class="fd-list__object-attribute"
                  >
                    
   
                    <span
                      class="fd-list__object-attribute-text"
                    >
                      Third Attribute
                    </span>
                    
   
                  </div>
                  
   
                </div>
                
   
              </div>
              
   
            </div>
            
   
          </div>
           
   
        </a>
        
  
      </li>
      
  
      <li
        class="fd-list__item"
        role="option"
        tabindex="0"
      >
        
    
        <div
          class="fd-list__content"
        >
          
    
          <div
            class="fd-list__optional"
          >
            
    
            <span
              class="fd-list__optional-text"
            >
              Optional inline text
            </span>
            
    
          </div>
          
    
          <div
            class="fd-list__object fd-list__object--top-row"
          >
            
    
            <span
              aria-label="John Doe"
              class="fd-avatar fd-list__object-avatar fd-avatar--s fd-avatar--circle fd-avatar--thumbnail"
              role="presentation"
              style="background-image: url('http://lorempixel.com/400/400/nature/4/')"
            />
            
    
            <div
              class="fd-list__object fd-list__object--top-left"
            >
              
    
              <div
                class="fd-object-identifier fd-list__object-identifier"
              >
                
      
                <p
                  class="fd-object-identifier__title fd-list__object-identifier-title"
                >
                  
    Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
     
                </p>
                
     
              </div>
            </div>
            
    
            <div
              class="fd-list__object fd-list__object--top-right"
            >
              
    
              <span
                class="fd-object-number fd-list__object-number fd-object-number--positive"
              >
                
    
                <span
                  class="fd-object-number__text fd-list__object-number-text"
                >
                  956.00
                </span>
                
    
                <span
                  class="fd-object-number__unit fd-list__object-number-unit"
                >
                  Euro
                </span>
              </span>
              
    
            </div>
            
   
          </div>
          
   
          <div
            class="fd-list__object fd-list__object--bottom"
          >
            
   
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
   
              <div
                class="fd-list__object fd-list__object--bottom-right"
              >
                
   
                <span
                  class="fd-object-status fd-list__object-status fd-object-status--positive"
                >
                  
   
                  <span
                    class="fd-object-status__text fd-list__object-status-text"
                  >
                    First status
                  </span>
                </span>
                
   
              </div>
              
   
            </div>
            
   
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
   
              <div
                class="fd-list__object fd-list__object--bottom-left"
              >
                
   
                <div
                  class="fd-list__object-attribute"
                >
                  
   
                  <span
                    class="fd-list__object-attribute-text"
                  >
                    Second Attribute
                  </span>
                  
   
                </div>
                
   
              </div>
              
   
              <div
                class="fd-list__object fd-list__object--bottom-right"
              >
                
   
                <span
                  class="fd-object-status fd-list__object-status fd-object-status--inverted fd-object-status--indication-1"
                >
                  Indication1
                </span>
                
   
              </div>
              
   
            </div>
            
   
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
   
              <div
                class="fd-list__object fd-list__object--bottom-left"
              >
                
   
                <div
                  class="fd-list__object-attribute"
                >
                  
   
                  <span
                    class="fd-list__object-attribute-text"
                  >
                    Third Attribute
                  </span>
                  
   
                </div>
                
   
              </div>
              
   
            </div>
            
   
          </div>
          
   
        </div>
        
  
      </li>
      

    </ul>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/List/Object Multi Selection 1`] = `
<section>
  

  <h4
    id="objectListItemMultiSelection"
  >
    Object List Item With Multi Selection
  </h4>
  

  <div
    style="max-width: 450px"
  >
    

    <ul
      aria-labelledby="objectListItemMultiSelection"
      aria-multiselectable="true"
      class="fd-list fd-list--object fd-list--selection"
      role="listbox"
    >
      
  
      <li
        aria-selected="true"
        class="fd-list__item is-selected"
        role="option"
        tabindex="0"
      >
        
  
        <div
          class="fd-form-item fd-list__form-item"
        >
          
          
          <input
            checked=""
            class="fd-checkbox"
            id="Ai4ez6111Z"
            type="checkbox"
          />
          
          
          <label
            aria-label="select/de-select option 1"
            class="fd-checkbox__label"
            for="Ai4ez6111Z"
            tabindex="-1"
          />
          
  
        </div>
        
    
        <div
          class="fd-list__content"
        >
          
    
          <div
            class="fd-list__optional"
          >
            
    
            <span
              class="fd-list__optional-text"
            >
              Optional inline text
            </span>
            
    
          </div>
          
    
          <div
            class="fd-list__object fd-list__object--top-row"
          >
            
    
            <span
              class="fd-avatar fd-list__object-avatar fd-avatar--s"
              style="background-image: url('http://lorempixel.com/400/400/nature/4/')"
            />
            
    
            <div
              class="fd-list__object fd-list__object--top-left"
            >
              
    
              <div
                class="fd-object-identifier fd-list__object-identifier"
              >
                
      
                <p
                  class="fd-object-identifier__title fd-list__object-identifier-title"
                >
                  
    Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
     
                </p>
                
     
              </div>
            </div>
            
    
            <div
              class="fd-list__object fd-list__object--top-right"
            >
              
    
              <span
                class="fd-object-number fd-list__object-number fd-object-number--positive"
              >
                
    
                <span
                  class="fd-object-number__text fd-list__object-number-text"
                >
                  956.00
                </span>
                
    
                <span
                  class="fd-object-number__unit fd-list__object-number-unit"
                >
                  Euro
                </span>
              </span>
              
    
            </div>
            
   
          </div>
          
   
          <div
            class="fd-list__object fd-list__object--bottom"
          >
            
   
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
   
              <div
                class="fd-list__object fd-list__object--bottom-right"
              >
                
   
                <span
                  class="fd-object-status fd-list__object-status fd-object-status--positive"
                >
                  
   
                  <span
                    class="fd-object-status__text fd-list__object-status-text"
                  >
                    First status
                  </span>
                </span>
                
   
              </div>
              
   
            </div>
            
   
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
   
              <div
                class="fd-list__object fd-list__object--bottom-left"
              >
                
   
                <div
                  class="fd-list__object-attribute"
                >
                  
   
                  <span
                    class="fd-list__object-attribute-text"
                  >
                    Second Attribute
                  </span>
                  
   
                </div>
                
   
              </div>
              
   
              <div
                class="fd-list__object fd-list__object--bottom-right"
              >
                
   
                <span
                  class="fd-object-status fd-list__object-status fd-object-status--positive"
                >
                  
   
                  <span
                    class="fd-object-status__text fd-list__object-status-text"
                  >
                    Second status
                  </span>
                </span>
                
   
              </div>
              
   
            </div>
            
   
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
   
              <div
                class="fd-list__object fd-list__object--bottom-left"
              >
                
   
                <div
                  class="fd-list__object-attribute"
                >
                  
   
                  <span
                    class="fd-list__object-attribute-text"
                  >
                    Third Attribute
                  </span>
                  
   
                </div>
                
   
              </div>
              
   
            </div>
            
   
          </div>
          
   
        </div>
         
  
      </li>
      
  
      <li
        class="fd-list__item"
        role="option"
        tabindex="0"
      >
        
  
        <div
          class="fd-form-item fd-list__form-item"
        >
          
          
          <input
            class="fd-checkbox"
            id="Ai4ez6111K"
            type="checkbox"
          />
          
          
          <label
            aria-label="select/de-select option 2"
            class="fd-checkbox__label"
            for="Ai4ez6111K"
            tabindex="-1"
          />
          
  
        </div>
        
    
        <div
          class="fd-list__content"
        >
          
    
          <div
            class="fd-list__optional"
          >
            
    
            <span
              class="fd-list__optional-text"
            >
              Optional inline text
            </span>
            
    
          </div>
          
    
          <div
            class="fd-list__object fd-list__object--top-row"
          >
            
    
            <span
              aria-label="John Doe"
              class="fd-avatar fd-list__object-avatar fd-avatar--s fd-avatar--circle fd-avatar--thumbnail"
              role="presentation"
              style="background-image: url('http://lorempixel.com/400/400/nature/4/')"
            />
            
    
            <div
              class="fd-list__object fd-list__object--top-left"
            >
              
    
              <div
                class="fd-object-identifier fd-list__object-identifier"
              >
                
      
                <p
                  class="fd-object-identifier__title fd-list__object-identifier-title"
                >
                  
    Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
     
                </p>
                
     
              </div>
            </div>
            
    
            <div
              class="fd-list__object fd-list__object--top-right"
            >
              
    
              <span
                class="fd-object-number fd-list__object-number fd-object-number--positive"
              >
                
    
                <span
                  class="fd-object-number__text fd-list__object-number-text"
                >
                  956.00
                </span>
                
    
                <span
                  class="fd-object-number__unit fd-list__object-number-unit"
                >
                  Euro
                </span>
              </span>
              
    
            </div>
            
   
          </div>
          
   
          <div
            class="fd-list__object fd-list__object--bottom"
          >
            
   
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
   
              <div
                class="fd-list__object fd-list__object--bottom-right"
              >
                
   
                <span
                  class="fd-object-status fd-list__object-status fd-object-status--positive"
                >
                  
   
                  <span
                    class="fd-object-status__text fd-list__object-status-text"
                  >
                    First status
                  </span>
                </span>
                
   
              </div>
              
   
            </div>
            
   
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
   
              <div
                class="fd-list__object fd-list__object--bottom-left"
              >
                
   
                <div
                  class="fd-list__object-attribute"
                >
                  
   
                  <span
                    class="fd-list__object-attribute-text"
                  >
                    Seecond Attribute
                  </span>
                  
   
                </div>
                
   
              </div>
              
   
              <div
                class="fd-list__object fd-list__object--bottom-right"
              >
                
   
                <span
                  class="fd-object-status fd-list__object-status fd-object-status--positive"
                >
                  
   
                  <span
                    class="fd-object-status__text fd-list__object-status-text"
                  >
                    Second status
                  </span>
                </span>
                
   
              </div>
              
   
            </div>
            
   
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
   
              <div
                class="fd-list__object fd-list__object--bottom-left"
              >
                
   
                <div
                  class="fd-list__object-attribute"
                >
                  
   
                  <span
                    class="fd-list__object-attribute-text"
                  >
                    Third Attribute
                  </span>
                  
   
                </div>
                
   
              </div>
              
   
            </div>
            
   
          </div>
          
   
        </div>
        
  
      </li>
      

    </ul>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/List/Object Navigation 1`] = `
<section>
  


  <h4
    id="objectListItemNavigation"
  >
    Object List Item With Navigation
  </h4>
  


  <div
    style="max-width: 450px"
  >
    

    <ul
      aria-labelledby="objectListItemNavigation"
      class="fd-list fd-list--object fd-list--navigation"
      role="listbox"
    >
      
  
      <li
        class="fd-list__item fd-list__item--link"
        role="option"
        tabindex="0"
      >
        
    
        <a
          class="fd-list__link"
          href="#"
          tabindex="0"
        >
          
    
          <div
            class="fd-list__content"
          >
            
    
            <div
              class="fd-list__optional"
            >
              
    
              <span
                class="fd-list__optional-text"
              >
                Optional inline text
              </span>
              
    
            </div>
            
    
            <div
              class="fd-list__object fd-list__object--top-row"
            >
              
    
              <span
                class="fd-avatar fd-list__object-avatar fd-avatar--s fd-avatar--circle fd-avatar--thumbnail"
                style="background-image: url('http://lorempixel.com/400/400/nature/4/')"
              />
              
    
              <div
                class="fd-list__object fd-list__object--top-left"
              >
                
    
                <div
                  class="fd-object-identifier fd-list__object-identifier"
                >
                  
      
                  <p
                    class="fd-object-identifier__title fd-list__object-identifier-title fd-list__object-identifier-title"
                  >
                    
    Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
     
                  </p>
                  
     
                </div>
              </div>
              
    
              <div
                class="fd-list__object fd-list__object--top-right"
              >
                
    
                <span
                  class="fd-object-number fd-list__object-number fd-object-number--positive"
                >
                  
    
                  <span
                    class="fd-object-number__text fd-list__object-number-text"
                  >
                    956.00
                  </span>
                  
    
                  <span
                    class="fd-object-number__unit fd-list__object-number-unit"
                  >
                    Euro
                  </span>
                </span>
                
    
              </div>
              
   
            </div>
            
   
            <div
              class="fd-list__object fd-list__object--bottom"
            >
              
   
              <div
                class="fd-list__object fd-list__object--bottom-row"
              >
                
   
                <div
                  class="fd-list__object fd-list__object--bottom-right"
                >
                  
   
                  <span
                    class="fd-object-status fd-list__object-status fd-object-status--critical"
                  >
                    
   
                    <span
                      class="fd-object-status__text fd-list__object-status-text"
                    >
                      status
                    </span>
                    
   
                  </span>
                  
   
                </div>
                
   
              </div>
              
   
              <div
                class="fd-list__object fd-list__object--bottom-row"
              >
                
   
                <div
                  class="fd-list__object fd-list__object--bottom-left"
                >
                  
   
                  <div
                    class="fd-list__object-attribute"
                  >
                    
   
                    <span
                      class="fd-list__object-attribute-text"
                    >
                      Second Attribute
                    </span>
                    
   
                  </div>
                  
     
                </div>
                
   
                <div
                  class="fd-list__object fd-list__object--bottom-right"
                >
                  
   
                  <span
                    class="fd-object-status fd-list__object-status fd-object-status--positive"
                  >
                    
   
                    <span
                      class="fd-object-status__text fd-list__object-status-text"
                    >
                      Second status
                    </span>
                  </span>
                  
   
                </div>
                
   
              </div>
              
   
              <div
                class="fd-list__object fd-list__object--bottom-row"
              >
                
   
                <div
                  class="fd-list__object fd-list__object--bottom-left"
                >
                  
   
                  <div
                    class="fd-list__object-attribute"
                  >
                    
   
                    <span
                      class="fd-list__object-attribute-text"
                    >
                      Third Attribute
                    </span>
                    
   
                  </div>
                   
                </div>
                
   
              </div>
              
   
            </div>
            
   
          </div>
          
    
        </a>
         
  
      </li>
      
  
      <li
        class="fd-list__item fd-list__item--link"
        role="option"
        tabindex="0"
      >
        
    
        <a
          class="fd-list__link"
          tabindex="0"
        >
          
    
          <div
            class="fd-list__content"
          >
            
    
            <div
              class="fd-list__optional"
            >
              
    
              <span
                class="fd-list__optional-text"
              >
                Optional inline text
              </span>
              
    
            </div>
            
    
            <div
              class="fd-list__object fd-list__object--top-row"
            >
              
    
              <span
                aria-label="John Doe"
                class="fd-avatar fd-list__object-avatar fd-avatar--s fd-avatar--circle fd-avatar--thumbnail"
                role="presentation"
                style="background-image: url('http://lorempixel.com/400/400/nature/4/')"
              />
              
    
              <div
                class="fd-list__object fd-list__object--top-left"
              >
                
    
                <div
                  class="fd-object-identifier fd-list__object-identifier"
                >
                  
      
                  <p
                    class="fd-object-identifier__title fd-list__object-identifier-title"
                  >
                    
    Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
     
                  </p>
                  
     
                </div>
              </div>
              
     
              <div
                class="fd-list__object fd-list__object--top-right"
              >
                
     
                <span
                  class="fd-object-number fd-list__object-number fd-object-number--positive"
                >
                  
     
                  <span
                    class="fd-object-number__text fd-list__object-number-text"
                  >
                    956.00
                  </span>
                  
     
                  <span
                    class="fd-object-number__unit fd-list__object-number-unit"
                  >
                    Euro
                  </span>
                </span>
                
     
              </div>
              
    
            </div>
            
   
            <div
              class="fd-list__object fd-list__object--bottom"
            >
              
   
              <div
                class="fd-list__object fd-list__object--bottom-row"
              >
                
   
                <div
                  class="fd-list__object fd-list__object--bottom-right"
                >
                  
   
                  <span
                    class="fd-object-status fd-list__object-status fd-object-status--positive"
                  >
                    
   
                    <span
                      class="fd-object-status__text fd-list__object-status-text"
                    >
                      First status
                    </span>
                  </span>
                  
   
                </div>
                
   
              </div>
              
   
              <div
                class="fd-list__object fd-list__object--bottom-row"
              >
                
   
                <div
                  class="fd-list__object fd-list__object--bottom-left"
                >
                  
   
                  <div
                    class="fd-list__object-attribute"
                  >
                    
   
                    <span
                      class="fd-list__object-attribute-text"
                    >
                      Second Attribute
                    </span>
                    
   
                  </div>
                  
   
                </div>
                
   
                <div
                  class="fd-list__object fd-list__object--bottom-right"
                >
                  
   
                  <span
                    class="fd-object-status fd-list__object-status fd-object-status--positive"
                  >
                    
   
                    <span
                      class="fd-object-status__text fd-list__object-status-text"
                    >
                      Second status
                    </span>
                  </span>
                  
   
                </div>
                
   
              </div>
              
   
              <div
                class="fd-list__object fd-list__object--bottom-row"
              >
                
   
                <div
                  class="fd-list__object fd-list__object--bottom-left"
                >
                  
   
                  <div
                    class="fd-list__object-attribute"
                  >
                    
   
                    <span
                      class="fd-list__object-attribute-text"
                    >
                      Third Attribute
                    </span>
                    
   
                  </div>
                  
   
                </div>
                
   
              </div>
              
   
            </div>
            
   
          </div>
          
    
        </a>
         
  
      </li>
      

    </ul>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/List/Object Navigation Indicator 1`] = `
<section>
  


  <h4
    id="objectListItemNavigationIndicator"
  >
    Object List Item With Navigation Indicator
  </h4>
  


  <div
    style="max-width: 450px"
  >
    

    <ul
      aria-labelledby="objectListItemNavigationIndicator"
      class="fd-list fd-list--object fd-list--navigation fd-list--navigation-indication"
      role="listbox"
    >
      
  
      <li
        class="fd-list__item fd-list__item--link"
        role="option"
        tabindex="0"
      >
        
    
        <a
          class="fd-list__link fd-list__link--navigation-indicator"
          tabindex="0"
        >
          
    
          <div
            class="fd-list__content"
          >
            
    
            <div
              class="fd-list__optional"
            >
              
    
              <span
                class="fd-list__optional-text"
              >
                Optional inline text
              </span>
              
    
            </div>
            
    
            <div
              class="fd-list__object fd-list__object--top-row"
            >
              
    
              <span
                class="fd-avatar fd-list__object-avatar fd-avatar--s fd-avatar--circle fd-avatar--thumbnail"
                style="background-image: url('http://lorempixel.com/400/400/nature/4/')"
              />
              
    
              <div
                class="fd-list__object fd-list__object--top-left"
              >
                
    
                <div
                  class="fd-object-identifier fd-list__object-identifier"
                >
                  
      
                  <p
                    class="fd-object-identifier__title fd-list__object-identifier-title"
                  >
                    
    Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
     
                  </p>
                  
     
                </div>
              </div>
              
    
              <div
                class="fd-list__object fd-list__object--top-right"
              >
                
    
                <span
                  class="fd-object-number fd-list__object-number fd-object-number--positive"
                >
                  
    
                  <span
                    class="fd-object-number__text fd-list__object-number-text"
                  >
                    956.00
                  </span>
                  
    
                  <span
                    class="fd-object-number__unit fd-list__object-number-unit"
                  >
                    Euro
                  </span>
                </span>
                
    
              </div>
              
   
            </div>
            
   
            <div
              class="fd-list__object fd-list__object--bottom"
            >
              
   
              <div
                class="fd-list__object fd-list__object--bottom-row"
              >
                
   
                <div
                  class="fd-list__object fd-list__object--bottom-right"
                >
                  
   
                  <span
                    class="fd-object-status fd-list__object-status fd-object-status--positive"
                  >
                    
   
                    <span
                      class="fd-object-status__text fd-list__object-status-text"
                    >
                      Status
                    </span>
                  </span>
                  
   
                </div>
                
   
              </div>
              
   
              <div
                class="fd-list__object fd-list__object--bottom-row"
              >
                
   
                <div
                  class="fd-list__object fd-list__object--bottom-left"
                >
                  
   
                  <div
                    class="fd-list__object-attribute"
                  >
                    
   
                    <span
                      class="fd-list__object-attribute-text"
                    >
                      Second Attribute
                    </span>
                    
   
                  </div>
                     
                </div>
                
   
                <div
                  class="fd-list__object fd-list__object--bottom-right"
                >
                  
   
                  <span
                    class="fd-object-status fd-list__object-status fd-object-status--positive"
                  >
                    
   
                    <span
                      class="fd-object-status__text fd-list__object-status-text"
                    >
                      Second status
                    </span>
                  </span>
                  
   
                </div>
                
   
              </div>
              
   
              <div
                class="fd-list__object fd-list__object--bottom-row"
              >
                
   
                <div
                  class="fd-list__object fd-list__object--bottom-left"
                >
                  
   
                  <div
                    class="fd-list__object-attribute"
                  >
                    
   
                    <span
                      class="fd-list__object-attribute-text"
                    >
                      Third Attribute
                    </span>
                    
   
                  </div>
                     
                </div>
                
   
              </div>
              
   
            </div>
            
   
          </div>
          
    
        </a>
         
  
      </li>
      
  
      <li
        aria-selected="true"
        class="fd-list__item fd-list__item--link is-selected"
        role="option"
        tabindex="0"
      >
        
    
        <a
          class="fd-list__link fd-list__link--navigation-indicator is-navigated"
          tabindex="0"
        >
          
    
          <div
            class="fd-list__content"
          >
            
    
            <div
              class="fd-list__optional"
            >
              
    
              <span
                class="fd-list__optional-text"
              >
                Optional inline text
              </span>
              
    
            </div>
            
    
            <div
              class="fd-list__object fd-list__object--top-row"
            >
              
    
              <span
                aria-label="John Doe"
                class="fd-avatar fd-list__object-avatar fd-avatar--s fd-avatar--circle fd-avatar--thumbnail"
                role="presentation"
                style="background-image: url('http://lorempixel.com/400/400/nature/4/')"
              />
              
    
              <div
                class="fd-list__object fd-list__object--top-left"
              >
                
    
                <div
                  class="fd-object-identifier fd-list__object-identifier"
                >
                  
      
                  <p
                    class="fd-object-identifier__title fd-list__object-identifier-title"
                  >
                    
    Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
     
                  </p>
                  
     
                </div>
              </div>
              
    
              <div
                class="fd-list__object fd-list__object--top-right"
              >
                
    
                <span
                  class="fd-object-number fd-list__object-number fd-object-number--positive"
                >
                  
    
                  <span
                    class="fd-object-number__text fd-list__object-number-text"
                  >
                    956.00
                  </span>
                  
    
                  <span
                    class="fd-object-number__unit fd-list__object-number-unit"
                  >
                    Euro
                  </span>
                </span>
                
    
              </div>
              
   
            </div>
            
   
            <div
              class="fd-list__object fd-list__object--bottom"
            >
              
   
              <div
                class="fd-list__object fd-list__object--bottom-row"
              >
                
   
                <div
                  class="fd-list__object fd-list__object--bottom-right"
                >
                  
   
                  <span
                    class="fd-object-status fd-list__object-status fd-object-status--positive"
                  >
                    
   
                    <span
                      class="fd-object-status__text fd-list__object-status-text"
                    >
                      First status
                    </span>
                  </span>
                  
   
                </div>
                
   
              </div>
              
   
              <div
                class="fd-list__object fd-list__object--bottom-row"
              >
                
   
                <div
                  class="fd-list__object fd-list__object--bottom-left"
                >
                  
   
                  <div
                    class="fd-list__object-attribute"
                  >
                    
   
                    <span
                      class="fd-list__object-attribute-text"
                    >
                      Second Attribute
                    </span>
                    
   
                  </div>
                  
   
                </div>
                
   
                <div
                  class="fd-list__object fd-list__object--bottom-right"
                >
                  
   
                  <span
                    class="fd-object-status fd-list__object-status fd-object-status--positive"
                  >
                    
   
                    <span
                      class="fd-object-status__text fd-list__object-status-text"
                    >
                      Second status
                    </span>
                  </span>
                  
   
                </div>
                
   
              </div>
              
   
              <div
                class="fd-list__object fd-list__object--bottom-row"
              >
                
   
                <div
                  class="fd-list__object fd-list__object--bottom-left"
                >
                  
   
                  <div
                    class="fd-list__object-attribute"
                  >
                    
   
                    <span
                      class="fd-list__object-attribute-text"
                    >
                      Third Attribute
                    </span>
                    
   
                  </div>
                  
   
                </div>
                
   
              </div>
              
   
            </div>
            
   
          </div>
          
    
        </a>
         
  
      </li>
      

    </ul>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/List/Object Object 1`] = `
<section>
  

  <h4
    id="objectListItemHeader"
  >
    Object List Item
  </h4>
  

  <ul
    aria-labelledby="objectListItemHeader"
    class="fd-list fd-list--object"
    role="listbox"
  >
    
  
    <li
      class="fd-list__item"
      role="option"
      tabindex="0"
    >
      
  
      <div
        class="fd-list__content"
      >
        
     
        <div
          class="fd-list__optional"
        >
          
     
          <span
            class="fd-list__optional-text"
          >
            Optional inline text
          </span>
          
     
        </div>
        
     
        <div
          class="fd-list__object fd-list__object--top-row"
        >
          
     
          <span
            class="fd-avatar fd-avatar--s fd-list__object-avatar"
            style="background-image: url('http://lorempixel.com/400/400/nature/4/')"
          />
          
     
          <div
            class="fd-list__object fd-list__object--top-left"
          >
            
     
            <div
              class="fd-object-identifier fd-list__object-identifier"
            >
              
       
              <p
                class="fd-object-identifier__title fd-list__object-identifier-title"
              >
                
     Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
      
              </p>
              
      
            </div>
            
      
          </div>
          
     
          <div
            class="fd-list__object fd-list__object--top-right"
          >
            
     
            <span
              class="fd-object-number fd-object-number--critical fd-list__object-number"
            >
              
     
              <span
                class="fd-object-number__text fd-list__object-number-text"
              >
                457.00
              </span>
              
     
              <span
                class="fd-object-number__unit fd-list__object-number-unit"
              >
                Euro
              </span>
              
     
            </span>
            
     
          </div>
          
    
        </div>
        
    
        <div
          class="fd-list__object fd-list__object--bottom"
        >
          
    
          <div
            class="fd-list__object fd-list__object--bottom-row"
          >
            
    
            <div
              class="fd-list__object fd-list__object--bottom-left"
            >
              
    
              <div
                class="fd-list__object-attribute"
              >
                
      
                <span
                  class="fd-list__object-attribute-text"
                >
                  First Attribute
                </span>
                
      
              </div>
              
    
            </div>
            
    
            <div
              class="fd-list__object fd-list__object--bottom-right"
            >
              
    
              <div
                class="fd-object-marker"
              >
                
    
                <i
                  aria-label="icon for flag"
                  class="fd-object-marker__icon sap-icon--flag"
                />
                
    
              </div>
              
    
              <div
                class="fd-object-marker"
              >
                
    
                <i
                  aria-label="icon for favourite"
                  class="fd-object-marker__icon sap-icon--favorite"
                />
                
    
              </div>
              
    
            </div>
            
    
          </div>
          
    
          <div
            class="fd-list__object fd-list__object--bottom-row"
          >
            
    
            <div
              class="fd-list__object fd-list__object--bottom-left"
            >
              
    
              <div
                class="fd-list__object-attribute"
              >
                
    
                <span
                  class="fd-list__object-attribute-text"
                >
                  Second Attribute
                </span>
                
    
              </div>
              
    
            </div>
            
    
            <div
              class="fd-list__object fd-list__object--bottom-right"
            >
              
    
              <span
                class="fd-object-status fd-object-status--critical fd-list__object-status"
              >
                
    
                <span
                  class="fd-object-status__text fd-list__object-status-text"
                >
                  Critical
                </span>
                
    
              </span>
              
    
            </div>
            
    
          </div>
          
    
          <div
            class="fd-list__object fd-list__object--bottom-row"
          >
            
    
            <div
              class="fd-list__object fd-list__object--bottom-left"
            >
              
    
              <div
                class="fd-list__object-attribute"
              >
                
    
                <span
                  class="fd-list__object-attribute-text"
                >
                  Third Attribute
                </span>
                
    
              </div>
              
    
            </div>
            
    
          </div>
          
    
        </div>
        
    
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="option"
      tabindex="0"
    >
      
  
      <div
        class="fd-list__content"
      >
        
     
        <div
          class="fd-list__object fd-list__object--top-row"
        >
          
     
          <span
            class="fd-avatar fd-list__object-avatar fd-avatar--s"
            style="background-image: url('http://lorempixel.com/400/400/nature/4/')"
          />
          
     
          <div
            class="fd-list__object fd-list__object--top-left"
          >
            
     
            <div
              class="fd-object-identifier fd-list__object-identifier"
            >
              
       
              <p
                class="fd-object-identifier__title fd-list__object-identifier-title"
              >
                
     Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
      
              </p>
              
      
            </div>
            
      
          </div>
          
     
          <div
            class="fd-list__object fd-list__object--top-right"
          >
            
     
            <span
              class=" fd-object-number fd-list__object-number"
            >
              
     
              <span
                class="fd-object-number__text fd-list__object-number-text"
              >
                956.00
              </span>
              
     
              <span
                class="fd-object-number__unit fd-list__object-number-unit"
              >
                Euro
              </span>
              
     
            </span>
            
     
          </div>
          
    
        </div>
        
    
        <div
          class="fd-list__object fd-list__object--bottom"
        >
          
    
          <div
            class="fd-list__object fd-list__object--bottom-row"
          >
            
    
            <div
              class="fd-list__object fd-list__object--bottom-left"
            >
              
    
              <div
                class="fd-list__object-attribute"
              >
                
    
                <span
                  class="fd-list__object-attribute-text"
                >
                  First Attribute
                </span>
                
    
              </div>
              
    
            </div>
            
    
            <div
              class="fd-list__object fd-list__object--bottom-right"
            >
              
    
              <span
                class="fd-object-status fd-list__object-status fd-object-status--negative"
              >
                
    
                <i
                  class="fd-object-status__icon fd-list__object-status-icon sap-icon--status-negative"
                  role="presentation"
                />
                
    
                <span
                  class="fd-object-status__text fd-list__object-status-text"
                >
                  Negative
                </span>
                
   
              </span>
              
   
            </div>
            
    
          </div>
          
    
          <div
            class="fd-list__object fd-list__object--bottom-row"
          >
            
    
            <div
              class="fd-list__object fd-list__object--bottom-left"
            >
              
    
              <div
                class="fd-list__object-attribute"
              >
                
    
                <span
                  class="fd-list__object-attribute-text"
                >
                  Second Attribute
                </span>
                
    
              </div>
              
    
            </div>
            
    
            <div
              class="fd-list__object fd-list__object--bottom-right"
            >
              
    
              <span
                class="fd-object-status fd-list__object-status fd-object-status--positive"
              >
                
   
                <span
                  class="fd-object-status__text fd-list__object-status-text"
                >
                  Second status
                </span>
              </span>
              
    
            </div>
            
    
          </div>
          
    
          <div
            class="fd-list__object fd-list__object--bottom-row"
          >
            
    
            <div
              class="fd-list__object fd-list__object--bottom-left"
            >
              
    
              <div
                class="fd-list__object-attribute"
              >
                
    
                <span
                  class="fd-list__object-attribute-text"
                >
                  Third Attribute
                </span>
                
    
              </div>
              
    
            </div>
            
    
          </div>
          
    
        </div>
        
    
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="option"
      tabindex="0"
    >
      
  
      <div
        class="fd-list__content"
      >
        
     
        <div
          class="fd-list__object fd-list__object--top-row"
        >
          
     
          <div
            class="fd-list__object fd-list__object--top-left"
          >
            
     
            <div
              class="fd-object-identifier fd-list__object-identifier"
            >
              
       
              <p
                class="fd-object-identifier__title fd-list__object-identifier-title"
              >
                
     Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
      
              </p>
              
      
            </div>
            
      
          </div>
          
      
          <div
            class="fd-list__object fd-list__object--top-right"
          >
            
      
            <span
              class="fd-object-number fd-object-number--critical fd-list__object-number"
            >
              
      
              <span
                class="fd-object-number__text fd-list__object-number-text"
              >
                457.00
              </span>
              
      
              <span
                class="fd-object-number__unit fd-list__object-number-unit"
              >
                Euro
              </span>
              
      
            </span>
            
      
          </div>
          
     
        </div>
        
    
        <div
          class="fd-list__object fd-list__object--bottom"
        >
          
    
          <div
            class="fd-list__object fd-list__object--bottom-row"
          >
            
    
            <div
              class="fd-list__object fd-list__object--bottom-left"
            >
              
    
              <div
                class="fd-list__object-attribute"
              >
                
    
                <span
                  class="fd-list__object-attribute-text"
                >
                  First Attribute
                </span>
                
    
              </div>
              
    
            </div>
            
    
          </div>
          
    
          <div
            class="fd-list__object fd-list__object--bottom-row"
          >
            
    
            <div
              class="fd-list__object fd-list__object--bottom-left"
            >
              
    
              <div
                class="fd-list__object-attribute"
              >
                
    
                <span
                  class="fd-list__object-attribute-text"
                >
                  Second Attribute
                </span>
                
    
              </div>
              
    
            </div>
            
    
            <div
              class="fd-list__object fd-list__object--bottom-right"
            >
              
    
              <span
                class="fd-object-status fd-list__object-status fd-object-status--inverted fd-object-status--critical"
              >
                Inverted Warning
              </span>
              
    
            </div>
            
    
          </div>
          
    
          <div
            class="fd-list__object fd-list__object--bottom-row"
          >
            
    
            <div
              class="fd-list__object fd-list__object--bottom-left"
            >
              
    
              <div
                class="fd-list__object-attribute"
              >
                
    
                <span
                  class="fd-list__object-attribute-text"
                >
                  Third Attribute
                </span>
                
    
              </div>
              
    
            </div>
            
    
          </div>
          
    
        </div>
        
    
      </div>
      
  
    </li>
    <li
      class="fd-list__item"
      role="option"
      tabindex="0"
    >
      
  
      <div
        class="fd-list__content"
      >
        
     
        <div
          class="fd-list__optional"
        >
          
     
          <span
            class="fd-list__optional-text"
          >
            Optional inline text
          </span>
          
     
        </div>
        
     
        <div
          class="fd-list__object fd-list__object--top-row"
        >
          
     
          <span
            class="fd-avatar fd-list__object-avatar fd-avatar--s"
            style="background-image: url('http://lorempixel.com/400/400/nature/4/')"
          />
          
     
          <div
            class="fd-list__object fd-list__object--top-left"
          >
            
     
            <div
              class="fd-object-identifier fd-list__object-identifier"
            >
              
       
              <p
                class="fd-object-identifier__title fd-list__object-identifier-title"
              >
                
     Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
      
              </p>
              
      
            </div>
          </div>
          
      
          <div
            class="fd-list__object fd-list__object--top-right"
          >
            
      
            <span
              class="fd-object-number fd-object-number--critical fd-list__object-number"
            >
              
      
              <span
                class="fd-object-number__text fd-list__object-number-text"
              >
                757.00
              </span>
              
      
              <span
                class="fd-object-number__unit fd-list__object-number-unit"
              >
                Euro
              </span>
              
      
            </span>
            
      
          </div>
          
     
        </div>
        
    
        <div
          class="fd-list__object fd-list__object--bottom"
        >
          
    
          <div
            class="fd-list__object fd-list__object--bottom-row"
          >
            
    
            <div
              class="fd-list__object fd-list__object--bottom-right"
            >
              
    
              <span
                class="fd-object-status fd-list__object-status fd-object-status--positive"
              >
                
    
                <span
                  class="fd-object-status__text fd-list__object-status-text"
                >
                  First status
                </span>
              </span>
              
    
            </div>
            
    
          </div>
          
    
          <div
            class="fd-list__object fd-list__object--bottom-row"
          >
            
    
            <div
              class="fd-list__object fd-list__object--bottom-left"
            >
              
    
              <div
                class="fd-list__object-attribute"
              >
                
    
                <span
                  class="fd-list__object-attribute-text"
                >
                  Second Attribute
                </span>
                
    
              </div>
              
    
            </div>
            
    
            <div
              class="fd-list__object fd-list__object--bottom-right"
            >
              
    
              <span
                class="fd-object-status fd-list__object-status fd-object-status--positive"
              >
                
   
                <span
                  class="fd-object-status__text fd-list__object-status-text"
                >
                  Second status
                </span>
              </span>
              
    
            </div>
            
    
          </div>
          
    
          <div
            class="fd-list__object fd-list__object--bottom-row"
          >
            
    
            <div
              class="fd-list__object fd-list__object--bottom-left"
            >
              
    
              <div
                class="fd-list__object-attribute"
              >
                
    
                <span
                  class="fd-list__object-attribute-text"
                >
                  Third Attribute
                </span>
                
    
              </div>
              
    
            </div>
            
    
          </div>
          
    
        </div>
        
    
      </div>
      
  
    </li>
    

  </ul>
  

</section>
`;

exports[`Storyshots Components/List/Object Rtl 1`] = `
<section>
  


  <h4
    id="objectListItemRTL"
  >
    Object list item in RTL mode
  </h4>
  


  <div
    dir="rtl"
    style="width: 100%"
  >
    

    <ul
      aria-labelledby="objectListItemRTL"
      class="fd-list fd-list--object"
      role="listbox"
    >
      

      <li
        class="fd-list__item"
        role="option"
        tabindex="0"
      >
        

        <div
          class="fd-list__content"
        >
          
   
          <div
            class="fd-list__optional"
          >
            
   
            <span
              class="fd-list__optional-text"
            >
              Optional inline text
            </span>
            
   
          </div>
          
   
          <div
            class="fd-list__object fd-list__object--top-row"
          >
            
   
            <span
              class="fd-avatar fd-list__object-avatar fd-avatar--s"
              style="background-image: url('http://lorempixel.com/400/400/nature/4/')"
            />
            
   
            <div
              class="fd-list__object fd-list__object--top-left"
            >
              
   
              <div
                class="fd-object-identifier fd-list__object-identifier"
              >
                
     
                <p
                  class="fd-object-identifier__title fd-list__object-identifier-title"
                >
                  
   Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
    
                </p>
                
    
              </div>
            </div>
            
   
            <div
              class="fd-list__object fd-list__object--top-right"
            >
              
   
              <span
                class="fd-object-number fd-list__object-number"
              >
                
   
                <span
                  class="fd-object-number__text fd-list__object-number-text"
                >
                  956.00
                </span>
                
   
                <span
                  class="fd-object-number__unit fd-list__object-number-unit"
                >
                  Euro
                </span>
              </span>
              
   
            </div>
            
  
          </div>
          
  
          <div
            class="fd-list__object fd-list__object--bottom"
          >
            
  
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
  
              <div
                class="fd-list__object fd-list__object--bottom-left"
              >
                
  
                <div
                  class="fd-list__object-attribute"
                >
                  
  
                  <span
                    class="fd-list__object-attribute-text"
                  >
                    First Attribute
                  </span>
                  
  
                </div>
                
  
              </div>
              
  
              <div
                class="fd-list__object fd-list__object--bottom-right"
              >
                
  
                <div
                  class="fd-object-marker"
                >
                  
  
                  <i
                    aria-label="icon for flag"
                    class="fd-object-marker__icon sap-icon--flag"
                  />
                  
  
                </div>
                
  
                <div
                  class="fd-object-marker"
                >
                  
  
                  <i
                    aria-label="icon for favourite"
                    class="fd-object-marker__icon sap-icon--favorite"
                  />
                  
  
                </div>
                
  
              </div>
              
  
            </div>
            
  
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
  
              <div
                class="fd-list__object fd-list__object--bottom-left"
              >
                
  
                <div
                  class="fd-list__object-attribute"
                >
                  
  
                  <span
                    class="fd-list__object-attribute-text"
                  >
                    Second Attribute
                  </span>
                  
  
                </div>
                
  
              </div>
              
  
              <div
                class="fd-list__object fd-list__object--bottom-right"
              >
                
  
                <span
                  class="fd-object-status fd-list__object-status fd-object-status--positive"
                >
                  
   
                  <span
                    class="fd-object-status__text fd-list__object-status-text"
                  >
                    Second status
                  </span>
                </span>
                
  
              </div>
              
  
            </div>
            
  
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
  
              <div
                class="fd-list__object fd-list__object--bottom-left"
              >
                
  
                <div
                  class="fd-list__object-attribute"
                >
                  
  
                  <span
                    class="fd-list__object-attribute-text"
                  >
                    Third Attribute
                  </span>
                  
  
                </div>
                
  
              </div>
              
  
            </div>
            
  
          </div>
          
  
        </div>
        

      </li>
      

      <li
        class="fd-list__item"
        role="option"
        tabindex="0"
      >
        

        <div
          class="fd-list__content"
        >
          
   
          <div
            class="fd-list__optional"
          >
            
   
            <span
              class="fd-list__optional-text"
            >
              Optional inline text
            </span>
            
   
          </div>
          
   
          <div
            class="fd-list__object fd-list__object--top-row"
          >
            
   
            <span
              class="fd-avatar fd-list__object-avatar fd-avatar--s"
              style="background-image: url('http://lorempixel.com/400/400/nature/4/')"
            />
            
   
            <div
              class="fd-list__object fd-list__object--top-left"
            >
              
   
              <div
                class="fd-object-identifier fd-list__object-identifier"
              >
                
     
                <p
                  class="fd-object-identifier__title fd-list__object-identifier-title"
                >
                  
   Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
    
                </p>
                
    
              </div>
            </div>
            
   
            <div
              class="fd-list__object fd-list__object--top-right"
            >
              
   
              <span
                class="fd-object-number fd-list__object-number"
              >
                
   
                <span
                  class="fd-object-number__text fd-list__object-number-text"
                >
                  956.00
                </span>
                
   
                <span
                  class="fd-object-number__unit fd-list__object-number-unit"
                >
                  Euro
                </span>
              </span>
              
   
            </div>
            
  
          </div>
          
  
          <div
            class="fd-list__object fd-list__object--bottom"
          >
            
  
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
  
              <div
                class="fd-list__object fd-list__object--bottom-left"
              >
                
  
                <div
                  class="fd-list__object-attribute"
                >
                  
  
                  <span
                    class="fd-list__object-attribute-text"
                  >
                    First Attribute
                  </span>
                  
  
                </div>
                
  
              </div>
              
  
              <div
                class="fd-list__object fd-list__object--bottom-right"
              >
                
  
                <span
                  class="fd-object-status fd-list__object-status fd-object-status--negative"
                >
                  Negative
                </span>
                
  
              </div>
              
  
            </div>
            
  
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
  
              <div
                class="fd-list__object fd-list__object--bottom-left"
              >
                
  
                <div
                  class="fd-list__object-attribute"
                >
                  
  
                  <span
                    class="fd-list__object-attribute-text"
                  >
                    Second Attribute
                  </span>
                  
  
                </div>
                  
              </div>
              
  
              <div
                class="fd-list__object fd-list__object--bottom-right"
              >
                
  
                <span
                  class="fd-object-status fd-list__object-status fd-object-status--positive"
                >
                  
   
                  <span
                    class="fd-object-status__text fd-list__object-status-text"
                  >
                    Second status
                  </span>
                </span>
                
  
              </div>
              
  
            </div>
            
  
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
  
              <div
                class="fd-list__object fd-list__object--bottom-left"
              >
                
  
                <div
                  class="fd-list__object-attribute"
                >
                  
  
                  <span
                    class="fd-list__object-attribute-text"
                  >
                    Third Attribute
                  </span>
                  
  
                </div>
                  
              </div>
              
  
            </div>
            
  
          </div>
          
  
        </div>
        

      </li>
      

      <li
        class="fd-list__item"
        role="option"
        tabindex="0"
      >
        
  
        <div
          class="fd-list__content"
        >
          
     
          <div
            class="fd-list__object fd-list__object--top-row"
          >
            
     
            <span
              class="fd-avatar fd-list__object-avatar fd-avatar--s"
              style="background-image: url('http://lorempixel.com/400/400/nature/4/')"
            />
            
     
            <div
              class="fd-list__object fd-list__object--top-left"
            >
              
     
              <div
                class="fd-object-identifier fd-list__object-identifier"
              >
                
       
                <p
                  class="fd-object-identifier__title fd-list__object-identifier-title"
                >
                  
     Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
      
                </p>
                
      
              </div>
              
      
            </div>
            
     
            <div
              class="fd-list__object fd-list__object--top-right"
            >
              
     
              <span
                class="fd-object-number fd-list__object-number"
              >
                
     
                <span
                  class="fd-object-number__text fd-list__object-number-text"
                >
                  956.00
                </span>
                
     
                <span
                  class="fd-object-number__unit fd-list__object-number-unit"
                >
                  Euro
                </span>
              </span>
              
     
            </div>
            
    
          </div>
          
    
          <div
            class="fd-list__object fd-list__object--bottom"
          >
            
    
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
    
              <div
                class="fd-list__object fd-list__object--bottom-left"
              >
                
    
                <div
                  class="fd-list__object-attribute"
                >
                  
    
                  <span
                    class="fd-list__object-attribute-text"
                  >
                    First Attribute
                  </span>
                  
    
                </div>
                
    
              </div>
              
    
              <div
                class="fd-list__object fd-list__object--bottom-right"
              >
                
    
                <span
                  class="fd-object-status fd-list__object-status fd-object-status--negative"
                >
                  
    
                  <i
                    class="fd-object-status__icon fd-list__object-status-icon sap-icon--status-negative"
                    role="presentation"
                  />
                  
    
                  <span
                    class="fd-object-status__text fd-list__object-status-text"
                  >
                    Negative
                  </span>
                  
   
                </span>
                
   
              </div>
              
    
            </div>
            
    
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
    
              <div
                class="fd-list__object fd-list__object--bottom-left"
              >
                
    
                <div
                  class="fd-list__object-attribute"
                >
                  
    
                  <span
                    class="fd-list__object-attribute-text"
                  >
                    Second Attribute
                  </span>
                  
    
                </div>
                
    
              </div>
              
    
              <div
                class="fd-list__object fd-list__object--bottom-right"
              >
                
    
                <span
                  class="fd-object-status fd-list__object-status fd-object-status--positive"
                >
                  
   
                  <span
                    class="fd-object-status__text fd-list__object-status-text"
                  >
                    Second status
                  </span>
                </span>
                
    
              </div>
              
    
            </div>
            
    
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
    
              <div
                class="fd-list__object fd-list__object--bottom-left"
              >
                
    
                <div
                  class="fd-list__object-attribute"
                >
                  
    
                  <span
                    class="fd-list__object-attribute-text"
                  >
                    Third Attribute
                  </span>
                  
    
                </div>
                
    
              </div>
              
    
            </div>
            
    
          </div>
          
    
        </div>
        
  
      </li>
      
    
    </ul>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/List/Object Selection 1`] = `
<section>
  

  <h4
    id="objectListItemRowSelection"
  >
    Object List Item With Row Selection
  </h4>
  

  <div
    style="max-width: 450px"
  >
    

    <ul
      aria-labelledby="objectListItemRowSelection"
      class="fd-list fd-list--object fd-list--selection fd-list__row-selection"
      role="listbox"
    >
      
  
      <li
        class="fd-list__item"
        role="option"
        tabindex="0"
      >
        
    
        <div
          class="fd-list__content"
        >
          
    
          <div
            class="fd-list__optional"
          >
            
    
            <span
              class="fd-list__optional-text"
            >
              Optional inline text
            </span>
            
    
          </div>
          
    
          <div
            class="fd-list__object fd-list__object--top-row"
          >
            
    
            <span
              class="fd-avatar fd-list__object-avatar fd-avatar--s"
              style="background-image: url('http://lorempixel.com/400/400/nature/4/')"
            />
            
    
            <div
              class="fd-list__object fd-list__object--top-left"
            >
              
    
              <div
                class="fd-object-identifier fd-list__object-identifier"
              >
                
      
                <p
                  class="fd-object-identifier__title fd-list__object-identifier-title"
                >
                  
    Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
     
                </p>
                
     
              </div>
              
     
            </div>
            
    
            <div
              class="fd-list__object fd-list__object--top-right"
            >
              
    
              <span
                class="fd-object-number fd-list__object-number fd-object-number--positive"
              >
                
    
                <span
                  class="fd-object-number__text fd-list__object-number-text"
                >
                  956.00
                </span>
                
    
                <span
                  class="fd-object-number__unit fd-list__object-number-unit"
                >
                  Euro
                </span>
                
    
              </span>
              
    
            </div>
            
   
          </div>
          
   
          <div
            class="fd-list__object fd-list__object--bottom"
          >
            
   
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
   
              <div
                class="fd-list__object fd-list__object--bottom-right"
              >
                
   
                <span
                  class="fd-object-status fd-list__object-status fd-object-status--positive"
                >
                  
   
                  <span
                    class="fd-object-status__text fd-list__object-status-text"
                  >
                    First status
                  </span>
                </span>
                
   
              </div>
              
   
            </div>
            
   
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
   
              <div
                class="fd-list__object fd-list__object--bottom-left"
              >
                
   
                <div
                  class="fd-list__object-attribute"
                >
                  
   
                  <span
                    class="fd-list__object-attribute-text"
                  >
                    Second Attribute
                  </span>
                  
   
                </div>
                
   
              </div>
              
   
              <div
                class="fd-list__object fd-list__object--bottom-right"
              >
                
   
                <span
                  class="fd-object-status fd-list__object-status fd-object-status--positive"
                >
                  
   
                  <span
                    class="fd-object-status__text fd-list__object-status-text"
                  >
                    Second status
                  </span>
                  
   
                </span>
                
   
              </div>
              
   
            </div>
            
   
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
   
              <div
                class="fd-list__object fd-list__object--bottom-left"
              >
                
   
                <div
                  class="fd-list__object-attribute"
                >
                  
   
                  <span
                    class="fd-list__object-attribute-text"
                  >
                    Third Attribute
                  </span>
                  
   
                </div>
                
   
              </div>
              
   
            </div>
            
   
          </div>
          
   
        </div>
         
  
      </li>
      
  
      <li
        aria-selected="true"
        class="fd-list__item is-selected"
        role="option"
        tabindex="0"
      >
        
    
        <div
          class="fd-list__content"
        >
          
    
          <div
            class="fd-list__optional"
          >
            
    
            <span
              class="fd-list__optional-text"
            >
              Optional inline text
            </span>
            
    
          </div>
          
    
          <div
            class="fd-list__object fd-list__object--top-row"
          >
            
    
            <span
              aria-label="John Doe"
              class="fd-avatar fd-list__object-avatar fd-avatar--s fd-avatar--circle fd-avatar--thumbnail"
              role="presentation"
              style="background-image: url('http://lorempixel.com/400/400/nature/4/')"
            />
            
    
            <div
              class="fd-list__object fd-list__object--top-left"
            >
              
    
              <div
                class="fd-object-identifier fd-list__object-identifier"
              >
                
      
                <p
                  class="fd-object-identifier__title fd-list__object-identifier-title"
                >
                  
    Fitbit Versa Smart Watch, Black Fitbit Versa Smart Watch
     
                </p>
                
     
              </div>
            </div>
            
    
            <div
              class="fd-list__object fd-list__object--top-right"
            >
              
    
              <span
                class="fd-object-number fd-list__object-number fd-object-number--positive"
              >
                
    
                <span
                  class="fd-object-number__text fd-list__object-number-text"
                >
                  956.00
                </span>
                
    
                <span
                  class="fd-object-number__unit fd-list__object-number-unit"
                >
                  Euro
                </span>
              </span>
              
    
            </div>
            
   
          </div>
          
   
          <div
            class="fd-list__object fd-list__object--bottom"
          >
            
   
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
   
              <div
                class="fd-list__object fd-list__object--bottom-right"
              >
                
   
                <span
                  class="fd-object-status fd-list__object-status fd-object-status--positive"
                >
                  
   
                  <span
                    class="fd-object-status__text fd-list__object-status-text"
                  >
                    First status
                  </span>
                </span>
                
   
              </div>
              
   
            </div>
            
   
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
   
              <div
                class="fd-list__object fd-list__object--bottom-left"
              >
                
   
                <div
                  class="fd-list__object-attribute"
                >
                  
   
                  <span
                    class="fd-list__object-attribute-text"
                  >
                    Second Attribute
                  </span>
                  
   
                </div>
                
   
              </div>
              
   
              <div
                class="fd-list__object fd-list__object--bottom-right"
              >
                
   
                <span
                  class="fd-object-status fd-list__object-status fd-object-status--positive"
                >
                  
   
                  <span
                    class="fd-object-status__text fd-list__object-status-text"
                  >
                    Second status
                  </span>
                </span>
                
   
              </div>
              
   
            </div>
            
   
            <div
              class="fd-list__object fd-list__object--bottom-row"
            >
              
   
              <div
                class="fd-list__object fd-list__object--bottom-left"
              >
                
   
                <div
                  class="fd-list__object-attribute"
                >
                  
   
                  <span
                    class="fd-list__object-attribute-text"
                  >
                    Third Attribute
                  </span>
                  
   
                </div>
                
   
              </div>
              
   
            </div>
            
   
          </div>
          
   
        </div>
        
  
      </li>
      

    </ul>
    

  </div>
  

</section>
`;
